create the callender component.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "baseUrl": ".",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "paths": {
             "@/*": ["src/*"]
         }
