--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -27,5 +27,6 @@
         }
     },
     "include": ["src"],
+    "exclude": ["node_modules"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
