--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
     "dev": "bun --watch src/index.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "bun-types": "latest",
@@ -13,5 +14,10 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "express": "^4.18.2",
+    "zod": "^3.22.4"
   }
 }
