--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/passport": "^1.0.15",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "bun-types": "latest",
@@ -17,7 +20,13 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "8",
+    "mongoose": "^8.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "zod": "^3.22.4"
   }
 }
