--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
             "bun-types" // add Bun global
         ]
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "scripts"]
 }
