--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,7 @@
     "@types/passport": "^1.0.15",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "bun-types": "latest",
@@ -25,8 +26,9 @@
     "jsonwebtoken": "8",
     "mongoose": "^8.0.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
+    "passport-jwt": "4.0.0",
     "passport-local": "^1.0.0",
+    "supertest": "^6.3.3",
     "zod": "^3.22.4"
   }
 }
