--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,10 +23,10 @@
     "chalk": "^5.3.0",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "8",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "passport": "^0.6.0",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "supertest": "^6.3.3",
     "zod": "^3.22.4"
