--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,7 +20,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "chalk": "^5.3.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
