set up and configure tests enviroment for react.

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -24,7 +24,8 @@
         "allowSyntheticDefaultImports": true,
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        // "types": ["@testing-library/jest-dom", "bun-types", "vite"]
     },
     "include": ["src"],
     "exclude": ["node_modules"],
