--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,8 +20,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "chalk": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
