--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/react": "^14.1.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-redux": "^9.0.0",
     "react-router-dom": "^6.17.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
