--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "format": "prettier . --write",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -29,6 +31,14 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.4",
+    "@storybook/addon-interactions": "^7.6.4",
+    "@storybook/addon-links": "^7.6.4",
+    "@storybook/addon-onboarding": "^1.0.9",
+    "@storybook/blocks": "^7.6.4",
+    "@storybook/react": "^7.6.4",
+    "@storybook/react-vite": "^7.6.4",
+    "@storybook/test": "^7.6.4",
     "@tailwindcss/container-queries": "^0.1.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react-hooks": "^8.0.1",
@@ -43,9 +53,11 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^0.6.15",
     "jsdom": "^22.1.0",
     "msw": "^2.0.10",
     "postcss": "^8.4.31",
+    "storybook": "^7.6.4",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
