--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "framer-motion": "^10.16.16",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2"
