--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "goose-track",
-  "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "prepare": "husky install",
-    "dev": "bun --cwd packages/client dev & bun --cwd packages/server dev"
-  },
-  "devDependencies": {
-    "@vitest/coverage-v8": "^0.34.6",
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ],
-  "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "framer-motion": "^10.16.16",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.2"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
-  }
+    "name": "goose-track",
+    "module": "index.ts",
+    "type": "module",
+    "scripts": {
+        "prepare": "husky install",
+        "dev": "bun --cwd packages/client dev & bun --cwd packages/api dev"
+    },
+    "devDependencies": {
+        "@vitest/coverage-v8": "^0.34.6",
+        "bun-types": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "workspaces": [
+        "packages/*"
+    ],
+    "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "framer-motion": "^10.16.16",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2"
+    },
+    "lint-staged": {
+        "**/*.{js,jsx,ts,tsx}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    }
 }
