--- a/package.json
+++ b/package.json
@@ -16,17 +16,10 @@
     "workspaces": [
         "packages/*"
     ],
-  "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "framer-motion": "^10.16.16",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+    "dependencies": {
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2"
+    },
     "lint-staged": {
         "**/*.{js,jsx,ts,tsx}": [
             "prettier --write",
